# Kimera_VIO_3

./: .gitmodules  CMakeLists.txt  Dockerfile_18_04  Dockerfile_22_04  Jenkins_22_04
capture/checker/: CMakeLists.txt  README.md
capture/checker/ShowQImage/src/: CammerWidget.cpp  CammerWidget.h  MessageQue.h  form.cpp  form.h
capture/iCentral_capture/: CMakeLists.txt
capture/iCentral_capture/include/: AcquisitionThread.h  CameraSettings.h  CaptureService.h  CaptureSettings.h  DataAccumulator.h  DataChannel.h  Device.h  DeviceIMU.h  DeviceList.h  FrameHeader.h  log.h
capture/iCentral_capture/src/: AcquisitionThread.cpp  CameraSettings.cpp  CaptureService.cpp  CaptureSettings.cpp  DataAccumulator.cpp  DataChannel.cpp  Device.cpp  DeviceIMU.cpp  DeviceList.cpp  log.cpp
capture/iCentral_capture/tools/: MagickppWrapper.cpp  MagickppWrapper.h  main_capture.cpp  main_decode.cpp  main_enumerate.cpp
cmake/: FindiCentral.cmake  properties.cmake
docs/: kimera_vio_install.md
examples/: KimeraVIO.cpp
imu/arduino/10Dof-D/: 10Dof-D.ino  imudata.h
include/kimera-vio/backend/: CMakeLists.txt  GnssVioBackend-definitions.h  GnssVioBackend.h  RegularVioBackend.h  VioBackend-definitions.h  VioBackend.h  VioBackendFactory.h
include/kimera-vio/dataprovider/: CMakeLists.txt  GNSSVIODataProvider.h  GnssStereoDataProviderModule.h
include/kimera-vio/frontend/: CMakeLists.txt  Gnss-definitions.h  Gnss.h  GnssParams.h  GnssStereoImuSyncPacket.h  GnssStereoVisionImuFrontend-definitions.h  GnssStereoVisionImuFrontend.h  GnssVisionImuFrontendModule.h  StereoVisionImuFrontend.h  VisionImuFrontend-definitions.h  VisionImuFrontendFactory.h  VisionImuFrontendModule.h
include/kimera-vio/frontend/optical-flow/: OpticalFlowVisualizer.h
include/kimera-vio/pipeline/: CMakeLists.txt  GnssStereoImuPipeline.h  Pipeline-definitions.h  PipelineModule.h  QueueSynchronizer.h  StereoImuPipeline.h
include/kimera-vio/utils/: ThreadsafeQueue.h
odometer/: GnssStereoVIO.cpp
params/Euroc/gnss/: PipelineParams.yaml
src/backend/: CMakeLists.txt  GnssVioBackend.cpp  RegularVioBackend.cpp  VioBackend.cpp  VioBackendModule.cpp
src/dataprovider/: CMakeLists.txt  EurocDataProvider.cpp  GNSSVIODataProvider.cpp  GnssStereoDataProviderModule.cpp  StereoDataProviderModule.cpp
src/frontend/: CMakeLists.txt  CameraParams.cpp  GnssParams.cpp  GnssStereoImuSyncPacket.cpp  GnssStereoVisionImuFrontend.cpp  GnssVisionImuFrontendModule.cpp  Tracker.cpp
src/frontend/feature-detector/: FeatureDetector.cpp
src/initial/: InitializationBackend.cpp
src/mesh/: MesherFactory.cpp
src/pipeline/: CMakeLists.txt  GnssStereoImuPipeline.cpp  Pipeline-definitions.cpp  Pipeline.cpp  StereoImuPipeline.cpp
tests/: testCamera.cpp  testOpticalFlowPredictor.cpp  testTracker.cpp  testVioBackend.cpp
tests/data/EurocParams/: GnssParams.yaml
